@@ -1,3 +1,8 @@
+2008-02-04  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_getNotifications): Pass through the
+	sequence numbers.
+
 2008-01-29  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_printTestPage): Don't default to
